# c2f

./: Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: args.rs  args_tests.rs  detect.rs  detect_tests.rs  lib.rs  main.rs
