[package]
name = "c2f"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
arboard = "3.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"

# cargo dist config
[workspace.metadata.dist]
cargo-dist-version = "0.29.1"
ci = "github"
installers = ["shell", "homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
install-path = "CARGO_HOME"
install-updater = false
publish-jobs = ["homebrew"]
tap = "balintb/homebrew-tap"
formula = "c2f"

[workspace.metadata.dist.github-custom-runners]
aarch64-apple-darwin = "macos-14"
x86_64-apple-darwin = "macos-13"
