[package]
name = "c2f"
version = "0.0.5"
repository = "https://github.com/balintb/c2f"
edition = "2021"
homepage = "https://github.com/balintb/c2f"
description = "CLI to write clipboard contents to a file"
license = "MIT"
categories = ["command-line-utilities"]

# cargo-release configuration
[package.metadata.release]
pre-release-commit-message = "chore: release {{version}}"
tag-message = "Release {{version}}"
tag-name = "v{{version}}"

[dependencies]
arboard = "3.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = true

[profile.dist]
inherits = "release"
